--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,5 +1,6 @@
 @import "normalize.css";
 @import "base/_global";
 @import "modules/_large-hero";
-
+@import "modules/_btn";
+@import "base/_variables.css";
 
