--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,6 +1,11 @@
 @import "normalize.css";
 @import "base/_global";
+@import "base/_variables";
+@import "base/_mixins";
 @import "modules/_large-hero";
 @import "modules/_btn";
-@import "base/_variables.css";
+@import 'modules/_wrapper';
+@import "modules/_page-section";
+@import "modules/_headline"
+
 
