--- a/app/assets/styles/base/_mixins.css
+++ b/app/assets/styles/base/_mixins.css
@@ -16,3 +16,11 @@
         @mixin-content;
     }
 }
+
+@define-mixin clearFix {
+    &::after {
+        content:"";
+        clear: both;
+        display: table;
+    }
+}
